--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "pixel-population",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
+    "bootstrap": "^5.0.2",
+    "datatables.net-bs4": "^3.2.2",
     "eslint": "^7.30.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "toastr": "^2.1.4",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
